// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize planning knows plannings 1`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "planning.keyword",
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "position": Object {
      "end": Object {
        "column": 26,
        "line": 0,
      },
      "start": Object {
        "column": 9,
        "line": 0,
      },
    },
    "type": "planning.timestamp",
  },
]
`;

exports[`tokenize planning knows plannings 2`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
    "type": "planning.keyword",
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "position": Object {
      "end": Object {
        "column": 28,
        "line": 0,
      },
      "start": Object {
        "column": 11,
        "line": 0,
      },
    },
    "type": "planning.timestamp",
  },
]
`;

exports[`tokenize planning knows plannings 3`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
    "type": "planning.keyword",
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "position": Object {
      "end": Object {
        "column": 28,
        "line": 0,
      },
      "start": Object {
        "column": 11,
        "line": 0,
      },
    },
    "type": "planning.timestamp",
  },
]
`;

exports[`tokenize planning knows plannings 4`] = `
Array [
  Object {
    "data": Object {
      "keyword": "DEADLINE",
    },
    "position": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
    "type": "planning.keyword",
  },
  Object {
    "data": Object {
      "date": 2017-12-31T11:00:00.000Z,
      "end": undefined,
    },
    "position": Object {
      "end": Object {
        "column": 29,
        "line": 0,
      },
      "start": Object {
        "column": 12,
        "line": 0,
      },
    },
    "type": "planning.timestamp",
  },
]
`;

exports[`tokenize planning knows these are not plannings 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 26,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;
